[package]
name = "carbon-macros"
version = "1.0.0"
edition = { workspace = true }
description = "Macros for Carbon"
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "macros"]
categories = ["encoding"]

[lib]
crate-type = ["rlib"]

[dependencies]
