[package]
name = "gpa-rpc-carbon-example"
version = "1.0.0"
edition = { workspace = true }

[dependencies]
carbon-core = { workspace = true }
carbon-helius-gpa-v2-datasource = { workspace = true }
carbon-log-metrics = { workspace = true }
carbon-marginfi-v2-decoder = { workspace = true }
carbon-rpc-gpa-datasource = { workspace = true }
solana-pubkey = { workspace = true }

dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
