[package]
name = "jetstreamer-carbon-example"
version = "1.0.0"
edition = { workspace = true }

[dependencies]
carbon-core = { workspace = true }
carbon-jetstreamer-datasource = { workspace = true }
carbon-log-metrics = { workspace = true }
carbon-token-2022-decoder = { workspace = true }

dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
